policies/tests/restrict-unsafe-sysctls/resource-fail.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: unsafe-sysctls-pod
  namespace: tenant-alpha
spec:
  securityContext:
    sysctls:
      - name: kernel.sem
        value: "250 32000 100 128"
      - name: net.core.somaxconn
        value: "4096"
  containers:
    - name: app
      image: "harbor.sre.internal/alpha/my-app:v1.0.0"
