policies/tests/restrict-unsafe-sysctls/resource-pass.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: safe-sysctls-pod
  namespace: tenant-alpha
spec:
  securityContext:
    sysctls:
      - name: kernel.shm_rmid_forced
        value: "1"
      - name: net.ipv4.ip_local_port_range
        value: "1024 65535"
  containers:
    - name: app
      image: "harbor.sre.internal/alpha/my-app:v1.0.0"
