policies/tests/restrict-unsafe-sysctls/kyverno-test.yaml
---
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: restrict-unsafe-sysctls-test
policies:
  - policy.yaml
resources:
  - resource-pass.yaml
  - resource-fail.yaml
results:
  - policy: restrict-unsafe-sysctls
    rule: restrict-sysctls
    resource: safe-sysctls-pod
    kind: Pod
    result: pass
  - policy: restrict-unsafe-sysctls
    rule: restrict-sysctls
    resource: unsafe-sysctls-pod
    kind: Pod
    result: fail
